--- a/deployment.properties
+++ b/deployment.properties
@@ -2,4 +2,6 @@ appdir.includes = composer.phar,\
 		src,\
 		README.md,\
 		build.xml,\
-		build
+		build,\
+		application.zpk,\
+		cache.properties
